applet: free the GCancellables used with libsecret

https://bugzilla.gnome.org/show_bug.cgi?id=694651